--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-eu não sou gay
+<h1>Petruk music</h1> 
+
+Aos 9 anos de idade eu comecei a ouvir estilos de musica um pouco diferentes do 
+convencional, como por exemplo rock, rap, reggae, entre outros,com meu onze anos
+de idade eu comecei a ter preferencia por rap e com meus treze anos eu comecei 
+a ouvir um subgênero chamado trap, hoje com meus quinze  eu estou começando a 
+pensar na logo e na melhor cidade para ter uma produtora musical.
+  Após um tempo pensando cheguei na conclusão de ser as seguintes cidades:
+São Paulo, Rio de Janeiro e Fortaleza.
+  Acho que os estados que tem mais chances de eu fundar uma produtora seriam 
+Rio de janeiro e Fortaleza, pois, lá já tem algumas produtoras musicais
+famosas como a 30 pra um que fica em fortaleza.
