--- a/index.html
+++ b/index.html
@@ -9,4 +9,4 @@ a ouvir um subgênero chamado trap, hoje com meus quinze  eu estou começando a
    <em> São Paulo, Rio de Janeiro e Fortaleza.</em></p>
  <p> Acho que os estados que tem mais chances de eu fundar uma produtora seriam 
 Rio de janeiro e Fortaleza, pois, lá já tem algumas produtoras musicais
-   famosas como a 30 pra um que fica em fortaleza.</p>
+   famosas como a <strong>30praum</strong> que fica em fortaleza.</p>
