--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+<!DOCTYPE html>
+<html>
+
+
 <h1>Petruk music</h1> 
 
 <p>Aos 9 anos de idade eu comecei a ouvir estilos de musica um pouco diferentes do 
@@ -10,3 +14,4 @@ a ouvir um subgênero chamado trap, hoje com meus quinze  eu estou começando a
  <p> Acho que os estados que tem mais chances de eu fundar uma produtora seriam 
 Rio de janeiro e Fortaleza, pois, lá já tem algumas produtoras musicais
    famosas como a <strong>30praum</strong> que fica em fortaleza.</p>
+<html>
