--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   a ouvir um subgênero chamado trap, hoje com meus quinze  eu estou começando a 
   pensar na logo e na melhor cidade para ter uma produtora musical.</p>
  <p> Após um tempo pensando cheguei na conclusão de ser as seguintes cidades:
-   <em> São Paulo, Rio de Janeiro e Fortaleza.</em></p>
+   <em> <strong>São Paulo, Rio de Janeiro e Fortaleza.</strong></em></p>
  <p> Acho que os estados que tem mais chances de eu fundar uma produtora seriam 
   Rio de janeiro e Fortaleza, pois, lá já tem algumas produtoras musicais
    famosas como a <strong>30praum</strong> que fica em fortaleza.</p>
