--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang-"pt-br">
 <meta charset=-"UTF-8">
-
-  <h1>Petruk music</h1> 
+  <title>Petruk Music</title>
+  <h1>Petruk Music</h1> 
 
     <p>Aos 9 anos de idade eu comecei a ouvir estilos de musica um pouco diferentes do 
   convencional, como por exemplo<strong> rock, rap, reggae,</strong> entre outros,com meu onze anos
