--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html lang-"pt-br">
+<head>
 <meta charset=-"UTF-8">
   <title>Petruk Music</title>
+  </head>
+  <body>
   <h1>Petruk Music</h1> 
 
      <p>Aos 9 anos de idade eu comecei a ouvir estilos de musica um pouco diferentes do 
@@ -16,4 +19,5 @@
     <p> Acho que os estados que tem mais chances de eu fundar uma produtora seriam 
   Rio de janeiro e Fortaleza, pois, lá já tem algumas produtoras musicais
    famosas como a <strong>30praum</strong> que fica em fortaleza.</p>
+  </body>
 <html>
