--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   a ouvir um subgênero chamado trap, hoje com meus quinze  eu estou começando a 
   pensar na logo e na melhor cidade para ter uma produtora musical.</p>
    
-    <p> Após um tempo pensando cheguei na conclusão de ser as seguintes cidades:
+    <p style="font-size:20px"> Após um tempo pensando cheguei na conclusão de ser as seguintes cidades:
    <em> <strong>São Paulo, Rio de Janeiro e Fortaleza.</strong></em></p>
   
     <p> Acho que os estados que tem mais chances de eu fundar uma produtora seriam 
