--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Petruk Music</title>
   </head>
   <body>
-  <h1>Petruk Music</h1> 
+  <h1 style="text-align:center">Petruk Music</h1> 
 
      <p>Aos 9 anos de idade eu comecei a ouvir estilos de musica um pouco diferentes do 
   convencional, como por exemplo<strong> rock, rap, reggae,</strong> entre outros,com meu onze anos
