--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
   
     <p> Acho que os estados que tem mais chances de eu fundar uma produtora seriam 
   Rio de janeiro e Fortaleza, pois, lá já tem algumas produtoras musicais
-   famosas como a <strong>30praum</strong> que fica em fortaleza.</p>
+   famosas como a <strong><style="color:red>30praum</strong> que fica em fortaleza.</p>
   </body>
 <html>
